ecmascript/parser/tests/test262-error-references/fail/37b860dbda4d4c9c.js.stderr
error: Expected Semi
 --> $DIR/tests/test262-parser/fail/37b860dbda4d4c9c.js:1:21
  |
1 | (function() { yield 3; })
  |                     ^

